--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.15.2",
     "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.9.0",
+    "mongoose-unique-validator": "^1.0.5",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1"
